<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".StudentDashboard">

    <!-- TODO: Update blank fragment layout -->
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_backd1"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/intersection_4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp60"
        android:background="@drawable/btn_background"
        android:text="@string/add_student"
        android:textColor="@color/white"
        android:textSize="@dimen/sp20"
        android:layout_margin="@dimen/dp20"
        app:backgroundTint="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@id/img_backd1"
        app:layout_constraintEnd_toEndOf="@id/img_backd1"
        app:layout_constraintStart_toStartOf="@id/img_backd1" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_view_student"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp60"
        android:background="@drawable/btn_background"
        android:text="@string/view_student"
        android:textColor="@color/white"
        android:textSize="@dimen/sp20"
        android:layout_margin="@dimen/dp20"
        app:backgroundTint="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@id/btn_add"
        app:layout_constraintEnd_toEndOf="@id/btn_add"
        app:layout_constraintStart_toStartOf="@id/btn_add" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_map"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp60"
        android:background="@drawable/btn_background"
        android:text="@string/map_view"
        android:textColor="@color/white"
        android:textSize="@dimen/sp20"
        android:layout_margin="@dimen/dp20"
        app:backgroundTint="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@id/btn_view_student"
        app:layout_constraintEnd_toEndOf="@id/btn_view_student"
        app:layout_constraintStart_toStartOf="@id/btn_view_student" />




</androidx.constraintlayout.widget.ConstraintLayout>